[gd_scene load_steps=5 format=3 uid="uid://brqa853qoim4q"]

[ext_resource type="Texture2D" uid="uid://d26aus41lfc6i" path="res://sprites/sEnemy/fe82ac72-5631-4fb6-8877-02993815a43f.png" id="1_2pb1h"]
[ext_resource type="Script" uid="uid://q7n7q51p5jlo" path="res://scripts/enemy.gd" id="1_px1sc"]
[ext_resource type="PackedScene" uid="uid://b3727bll2ulqq" path="res://Gun/enemy_gun.tscn" id="3_am0pq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pb1h"]
size = Vector2(28, 50)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_px1sc")

[node name="sEnemy" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
texture = ExtResource("1_2pb1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_2pb1h")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(23, 0)
collision_mask = 7

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)
collision_mask = 7

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(0, 26)
collision_mask = 4

[node name="Gun" parent="." instance=ExtResource("3_am0pq")]
position = Vector2(11, 8)
